compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/namedFun.kt
// RUN_PIPELINE_TILL: FRONTEND
<!NON_MEMBER_FUNCTION_NO_BODY!>fun bar()<!>

/* GENERATED_FIR_TAGS: functionDeclaration */
